Applications/Grafana/base/resources/network-policy-application-to-database.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 5432
