Applications/Grafana/base/resources/network-policy-cnpg-to-cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-to-cluster
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
