Applications/Grafana/base/resources/network-policy-renderer-to-application.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: renderer-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: renderer
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 3000
