Applications/Grafana/base/resources/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traefik-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 9094
        - protocol: UDP
          port: 9094
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-to-cluster
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubeproxy-to-cluster
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: ###CLUSTER_CIDR###
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: instance-to-instance
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: grafana-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: grafana-database
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-haengine
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: haengine
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-to-renderer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: renderer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: application
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: renderer-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: renderer
              app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 3000
